--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@artsy/fresnel": "^1.2.2",
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/runtime": "^7.11.2",
     "@blueprintjs/core": "^3.30.1",
@@ -52,9 +53,16 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
+    "image-webpack-loader": "^7.0.1",
     "jquery": "^3.5.1",
     "moment": "^2.27.0",
     "moment-duration-format": "^2.3.2",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "react-google-invisible-recaptcha": "^0.2.11",
+    "react-google-recaptcha": "^2.1.0",
+    "react-slideshow-image": "^3.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.0",
+    "styled-components": "^5.2.0"
   }
 }
